# deepstack-tutorials

./: Contributing.md  README.md  code_of_conduct.txt  index.toml  pyproject.toml
scripts/: full_dc_sync.py  generate_markdowns.py  generate_matrix.py  generate_txt.py
tutorials/: 01_Basic_QA_Pipeline.ipynb  02_Finetune_a_model_on_your_data.ipynb  03_Scalable_QA_System.ipynb  04_FAQ_style_QA.ipynb  05_Evaluation.ipynb  06_Better_Retrieval_via_Embedding_Retrieval.ipynb  07_RAG_Generator.ipynb  08_Preprocessing.ipynb  09_DPR_training.ipynb  10_Knowledge_Graph.ipynb  11_Pipelines.ipynb  12_LFQA.ipynb  13_Question_generation.ipynb  14_Query_Classifier.ipynb  15_TableQA.ipynb  16_Document_Classifier_at_Index_Time.ipynb  17_Audio.ipynb  18_GPL.ipynb  19_Text_to_Image_search_pipeline_with_MultiModal_Retriever.ipynb  20_Using_Deepstack_with_REST_API.ipynb  21_Customizing_PromptNode.ipynb  22_Pipeline_with_PromptNode.ipynb  23_Answering_Multihop_Questions_with_Agents.ipynb  24_Building_Chat_App.ipynb  25_Customizing_Agent.ipynb  26_Hybrid_Retrieval.ipynb  27_First_RAG_Pipeline.ipynb  28_Structured_Output_With_Loop.ipynb  29_Serializing_Pipelines.ipynb  30_File_Type_Preprocessing_Index_Pipeline.ipynb  31_Metadata_Filtering.ipynb  32_Classifying_Documents_and_Queries_by_Language.ipynb  33_Hybrid_Retrieval.ipynb  34_Extractive_QA_Pipeline.ipynb  35_Model_Based_Evaluation_of_RAG_Pipelines.ipynb  36_Building_Fallbacks_with_Conditional_Routing.ipynb  37_Simplifying_Pipeline_Inputs_with_Multiplexer.ipynb  39_Embedding_Metadata_for_Improved_Retrieval.ipynb  template.ipynb  (+1 more)
(+7 files in other folders)
